--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NEWBEST_MQTT_BROKER=""
-NEWBEST_MQTT_USER=""
-NEWBEST_MQTT_PWD=""
-NEWBEST_MQTT_HOME=""
+NEWBEST_MQTT_BROKER="emqx-cloud.newbest.com.cn"
+NEWBEST_MQTT_USER="user"
+NEWBEST_MQTT_PWD="password"
+NEWBEST_MQTT_HOME="balabalatIa"
 
-HA_MQTT_BROKER=""
-HA_MQTT_USER=""
-HA_MQTT_PWD=""
+HA_MQTT_BROKER="192.168.1.100"
+HA_MQTT_USER="user"
+HA_MQTT_PWD="password"
